--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagar-warfade-portfolio",
   "version": "0.0.1",
-  "homepage": "https://github.com/SagarWarfade18",
+  "homepage": "https://SagarWarfade18.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -26,12 +26,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
